internal/lang/test/testdata/errors/mutation_outside_func.scampi
module main

let xs = [1, 2, 3]
xs[0] = 99
